Refactor PriorityScheduler for improved process handling
Refactor PriorityScheduler to use maps for process management and enhance aging logic.